# exverus

./: .gitignore  .gitmodules  README.md  exverus_method.md  pyproject.toml  run_autoverus.py  setup.sh
Benchmarks/: README.md
Benchmarks/Dafnybench/unverified/: program_001_main.rs  program_006_main_func.rs  (+65 more)
Benchmarks/Obfuscated_Verusbench/: catagory.md
cleaned-verusbench/Diffy/: convert.py
cleaned-verusbench/Human-Eval-errors/: README.md
cleaned-verusbench/Leetcode-errors/: 16-3SumClosest.rs  2-AddTwoNumbers.rs  21-MergeTwoSortedList.rs  24-SwapPairs.rs  50-POW.rs  82-RemoveDup2.rs  83-RemoveDuplicate.rs
tests/data/: cloverbench_linear_search2_obfs.rs
tests/vinv/: test_autoverus.py  test_cex_validation_backend_v2.py  test_cli.py  test_pipeline_helpers.py  test_proof.py
tool/rs/convert/: Cargo.toml  convert_assume_syn.rs  extract_loop_syn.rs  inject_cex.rs  inject_cex_extracted.rs  read_loop_id_syn.rs  typed_inject.rs
vinv/: __init__.py  autoverus.py  cli.py  config.py  inv_mask_fill.py  inv_mask_fill_repair.py  invariant.py  lynette_utils.py  proof.py  proof_utils.py  specification.py  utils.py  verus_utils.py
vinv/analysis/: aggregate_injected_cex.py  autoverus_lynette_recalc.py  avg_cost_stats_per_model.py  case_analysis.py  cex_validation_stats.py  classify_task.py  compare_status.py  cost_stats_common.py  entry.json  error_trajectory.py  inspect_invariants.py  one_step_cex.py  parse_pipeline_result.py  plot_cost_strategy_comparison.py  run_error_stats.py  traj_error_analysis.py
vinv/cfbench/: curate.py  solution_gen.py
vinv/cherrypick/: scan_autoverus_trajectory.py
vinv/data/: cherrypick.py  invariant_inject.py  select_injected.py
vinv/pipeline/: README.md  VERIFICATION_CEX_TESTING.md  cex.py  cex_harness_v2.py  cex_validation_backend.py  counter_example.py  error_priority.py  ic3_parser.py  iterative.py  main.py  mut_val_generalization.py  mut_val_generalization.py.old  one_step.py  parser_utils.py  simple_cex.py  simple_generalization.py  trajectory.py  validator_extracted.py  validator_extracted_v2.py  verification_cex.py  z3_cex.py  z3_generalization.py  z3_utils.py
vinv/prompt/: cf_rust_solution_gen.txt  ctx_generalization.txt  ctx_generation.txt  inv_gen_plain.txt  note  obfuscate_plain.txt  trace_repair.txt
vinv/remove_redundant_code/: check_benchmark_verifiability.py  check_decrease_error.py  extract_intermediate_trajectories.py  find_redundant_invariants.py
vinv/trace_gen/: convert_assume.py  trace_gen_stage.py
(+2318 files in other folders)
