[project]
name = "verus-inv"
version = "0.1.0"
description = "Improving the performance of invariant generation for program verification using Verus"
authors = [
    {name="Jun Yang", email="juny@uchicago.edu"}
]
dependencies = [
    "loguru==0.7.3",
    "pytest==8.3.5",
    "azure-identity==1.23.0",
    "tiktoken==0.9.0",
    "z3-solver==4.15.1.0",
    "matplotlib==3.10.6",
    "matplotlib_venn==1.1.2",
    "argparse==1.4.0",
    "fire==0.7.1",
    "openai>=1.0.0",
    "anthropic>=0.39.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vinv*"]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
